--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,8 @@
   },
   "extends": ["airbnb-base"],
   "rules": {
+    "linebreak-style": "off",
+    "quotes": "off",
     "no-shadow": "off",
     "no-param-reassign": "off",
     "eol-last": "off",
